--- a/index.html
+++ b/index.html
@@ -5,26 +5,43 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML Quick Start</title>
+    <title>Site Title</title>
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="assets/css/owl.carousel.min.css">-->
+    <!--<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">-->
+    <!--<link rel="stylesheet" href="assets/css/slicknav.min.css">-->
+    <!--<link rel="stylesheet" href="assets/css/animate.min.css">-->
+    <!--<link rel="stylesheet" href="assets/css/magnific-popup.css">-->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <!--<link rel="stylesheet" href="assets/css/responsive.css">-->
+
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <![endif]-->
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="test text-center">
-                <h1>
-                    Hello HTML ! i'm here for Bootstrap support test.
-                </h1>
+<!--start your section-->
+
+<!--end your section-->
+
+<!--back to top-->
+<!--<div class="back_to_top_area">
+    <div class="container">
+        <div class="row">
+            <div class="back_to_top">
+                <i class="fa fa-arrow-up"></i>
             </div>
         </div>
     </div>
-</div>
-<script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="assets/js/custom.js"></script>
+</div>-->
+<!--back to end-->
+<script src="assets/js/jquery-3.3.1.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<!--<script src="assets/js/owl.carousel.min.js"></script>-->
+<!--<script src="assets/js/jquery.slicknav.min.js"></script>-->
+<!--<script src="assets/js/wow.min.js"></script>-->
+<!--<script src="assets/js/jquery.magnific-popup.min.js"></script>-->
+<!--<script src="assets/js/custom.js"></script>-->
 </body>
 </html>
